k8s/base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: places-backend
