k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: places-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        # image: places_backend:latest # Substitute with your actual image
        # imagePullPolicy: IfNotPresent
        image: places_backend-app:latest # Using local image
        imagePullPolicy: Never
        command: ["/bin/bash", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"]
        workingDir: /app
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: places-backend
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
